--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -65,7 +65,7 @@ dataSource:
 environments:
   development:
     dataSource:
-      dbCreate: create
+      dbCreate: update
       url: jdbc:mysql://localhost:3306/gerak
   test:
     dataSource:
