--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -1,12 +1,15 @@
 info:
   app:
-    name: '@info.app.name@'
-    version: '@info.app.version@'
-    grailsVersion: '@info.app.grailsVersion@'
+    name: "@info.app.name@"
+    version: "@info.app.version@"
+    grailsVersion: "@info.app.grailsVersion@"
 grails:
   plugin:
     elasticsearch:
       enabled: true
+      index:
+        autoCreateIndex: true
+        refreshInterval: 1s
       client:
         host: localhost
         port: 9200
@@ -29,37 +32,37 @@ grails:
       accept:
         header:
           userAgents:
-          - Gecko
-          - WebKit
-          - Presto
-          - Trident
+            - Gecko
+            - WebKit
+            - Presto
+            - Trident
     types:
-      all: '*/*'
+      all: "*/*"
       atom: application/atom+xml
       css: text/css
       csv: text/csv
       form: application/x-www-form-urlencoded
       html:
-      - text/html
-      - application/xhtml+xml
+        - text/html
+        - application/xhtml+xml
       js: text/javascript
       json:
-      - application/json
-      - text/json
+        - application/json
+        - text/json
       multipartForm: multipart/form-data
       pdf: application/pdf
       rss: application/rss+xml
       text: text/plain
       hal:
-      - application/hal+json
-      - application/hal+xml
+        - application/hal+json
+        - application/hal+xml
       xml:
-      - text/xml
-      - application/xml
+        - text/xml
+        - application/xml
 dataSource:
   driverClassName: com.mysql.cj.jdbc.Driver
   username: root
-  password: ''
+  password: ""
   pooled: true
   jmxExport: true
 environments:
